--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -17,13 +17,12 @@ knitr::opts_chunk$set(
 The Linear3 package aims to provide almost all the information needed for linear regression, with the exception of diagnostics. The `lr()` function mimics the output of `lm()`, `summary(lm())`, `confint()`, `hatvalues(lm())`, `rsstandard()` and `rstudent()` . The `anova()` function mimics the output of the `anova(lm( ))` function, for continuous sums of squares, and the output of the `car::Anova(lm( ), type="III")` function, for partial sum of squares.
 
 ```{r setup}
-library(Linear3)
+library(lrhw4)
 ```
 
 ## Example of the using `lr( )` function. 
 
 ```{r}
-library(datasets)
 lr(mpg ~ cyl + wt, mtcars)
 lr(mpg ~ cyl + wt, mtcars, include.intercept = FALSE)
 ```
