--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -92,9 +92,9 @@ Note: `ANOVA( )` automatically fit the model with an intercept.
 require("datasets")
 require("bench")
 ANOVA(mpg ~ cyl + wt + disp, mtcars, type = "Sequential")
-stats::anova(lm(mpg ~ cyl + wt + disp, mtcars))
+anova(lm(mpg ~ cyl + wt + disp, mtcars))
 ANOVAnumeric <- as.numeric(unlist(ANOVA(mpg ~ cyl + wt, mtcars, type = "Sequential")))
-anovanumeric <- as.numeric(unlist(stats::anova(lm(mpg ~ cyl + wt, mtcars))))
+anovanumeric <- as.numeric(unlist(anova(lm(mpg ~ cyl + wt, mtcars))))
 all.equal(ANOVAnumeric, anovanumeric)
 plot(mark(as.numeric(unlist(ANOVA(mpg ~ cyl + wt, mtcars, type = "Sequential"))), as.numeric(unlist(stats::anova(lm(mpg ~ cyl + wt, mtcars))))))
 ```
