update tutorial update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/XiwenF/Linear3/branch/master/graph/badge.svg)](https://app.codecov.io/gh/XiwenF/Linear3?branch=master)
 <!-- badges: end -->
 
-The goal of Linear3 is to ...
+The goal of Linear3 is to mimic existing R functions closely related to fitting linear regression models and anova. The imitated functions include: lm(), summary(), confint(), hatvalues(), rstudent(), rstandard(), anova(), Anova(Model, Type = "III"), some output can be used $ to extract from lm() and summary() such as residuals, fitted values and etc.
 
 ## Installation
 
@@ -28,8 +28,16 @@ You can install the development version of Linear3 from [GitHub](https://github.
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("XiwenF/Linear3")
+# install.packages("bench")
+# install.packages("ggbeeswarm")
+devtools::install_github("XiwenF/Linear3",build_vignettes = T)
 ```
+
+## Features
+
+Linear3::lr() is used to fit simple linear regression or multiple linear regression. When fitting the model, you can use the option include.intercept to decide whether to include or exclude the intercept. The function doesn't explicitly render any output until you extract the desired output with the name after $. To learn more about items that can be extracted from this function, go through ?lr help page for details.
+
+Linear3::ANOVA() is used to obtain the analysis of variance table. You can choose to obtain a sequential sum of squares ANOVA table or a partial sum of squares ANOVA table. The output is in a data.frame. For more detailed usage of this function, please refer to the help page: ?ANOVA.
 
 ## Example
 
@@ -38,20 +46,9 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(Linear3)
 ## basic example code
+lr(mpg ~ cyl + wt, mtcars)$coefficients ## Fit a model with intercept and extract coefficients
+ANOVA(mpg ~ cyl + wt + qsec, mtcars, type = "Sequential") ## Get sequential sums of squares 
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+For a more detailed tutorial and comparison with existing R functions, please refer to the booklet by following code browseVignettes(package = 'Linear3').
 
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
